tools/common/errors/tests/integration/mod.rs
//! Integration tests for the errors library
//!
//! This module contains integration tests for the errors library.